--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html>
 
   <head>
-    <title>Brief Toronto Tour</title>
+    <title>Advances in Intercontinental Travel</title>
     <meta name="description" content="a strapdown-based mapping exercise." />
     <!-- these script tags load important javascript "libraries"
          that our own little scripts depend on.  These are complex
          programs way beyond our capacities to construct; but we can
          make use of them nonetheless -->
-    <script src="http://maps.googleapis.com/maps/api/js?sensor=false"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?v=3&sensor=false&libraries=geometry"></script>
 
     <!-- this line is NOT present in the jsbin version -->
     <link rel="stylesheet" href="./style.css" type="text/css" media="screen" />
@@ -23,25 +23,33 @@
        we don't run the most important parts of the code until the page has finished loading.
     -->
   <body onload="initialize();">
-    <textarea theme="united" style="display:none;">
+    <textarea theme="amelia" style="display:none;">
 
-# This Map will eventually Become some kind of tour of Toronto.
+# This map contains several historic transatlantic voyages
+#### Click the animate button and hover over the markers to see how much intercontinental travel has improved since the day that Christopher Columbus first set sail across the Atlantic
 
-Your first task will be to locate some real places.  You can get the precise locations at various services, e.g [latlong.net](http://www.latlong.net/].
+Since the day that Christopher Columbus first set sail across the Atlantic in
+search of a new trade route to the East Indies, leading him to discover the Americas after a 70 day voyage,
+humanity has made great strides in the area of intercontinental travel. From
+improvements in the construction of sail-ships to the invention of steam-ships
+and zeppelins, to modern ships and airplanes, this map tells the story of the
+development of long distance travel throughout history to its current state.
 
-Then add those places to the marker array in [script.js](./script.js) (see instructions there).
+At the very least this should give you a new perspective in life the next time
+you're travelling with Delta or Ryan Airlines. The metaphorical death of dignity
+that you suffer during your flights with these companies is inconsequential
+when compared with hte very literal and very painful deaths that would've
+awaited you during your travels had you attempted a transatlantic voyage before
+the 1800's.
 
-replace this text and the text with your essay. But be sure not to eliminate the html elements that
-are contained inside this textarea, or your map won't work at all!
-
-It makes sense to put an introductory paragraph here, above the map and buttons. To change the bootswatch thenme, change "united" to one of the other theme names listed at [strapdownjs.com](http://strapdownjs.com/).
 
 <div class="">
   <!-- these buttons hide/show all the markers  -->
   <!-- to hide/show blue or red markers instead, change my_markers below to blue_markers
        to red_markers.  If you have defined your own color (or other) arrays, use those instead -->
-  <button onclick="hideMarkers(my_markers)" class="rounded" id="hide">hide markers</button>
-  <button onclick="showMarkers(my_markers, my_map)" id="show"> show markers</button>
+  <button onclick="hideMarkers(my_markers)" class="rounded" id="hide">Hide Markers</button>
+  <button onclick="showMarkers(my_markers, my_map)" class="rounded" id="show">Show Markers</button>
+  <button onclick="animateCircle()" class="rounded" id="anim">Animate</button>
   <p></p>
   <div id="mapcontainer">
     <div id="map_canvas"></div>
@@ -55,7 +63,7 @@ The rest of your essay should go under the map, probably.
 
 ## in sections like this
 also _italics_ and __bold__ which can also be written *like this* or **like this**
-etc. Be sure to [make use of links](http://digital.hackinghistory.ca) -- that's one of the reasons we write on the Web, and I've asked you to use links for all yor footnotes/references as well.  
+etc. Be sure to [make use of links](http://digital.hackinghistory.ca) -- that's one of the reasons we write on the Web, and I've asked you to use links for all yor footnotes/references as well.
     </textarea>
 
 
@@ -67,5 +75,6 @@ etc. Be sure to [make use of links](http://digital.hackinghistory.ca) -- that's 
     <script src="./script.js"></script>
 
   </body>
+
 
 </html>
