--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
   <body onload="initialize();">
     <textarea theme="amelia" style="display:none;">
 
+
 # This map contains several historic transatlantic voyages
 #### Click the animate button and hover over the markers to see how much intercontinental travel has improved since the day that Christopher Columbus first set sail across the Atlantic
 
@@ -37,9 +38,9 @@ development of long distance travel throughout history to its current state.
 
 At the very least this should give you a new perspective in life the next time
 you're travelling with Delta or Ryan Airlines. The metaphorical death of dignity
-that you suffer during your flights with these companies is inconsequential
-when compared with hte very literal and very painful deaths that would've
-awaited you during your travels had you attempted a transatlantic voyage before
+that one suffers when flying with these companies is inconsequential
+when compared with the very literal and painful deaths that
+awaited travellers that attempted a transatlantic voyage before
 the 1800's.
 
 
@@ -54,12 +55,33 @@ the 1800's.
   <div id="mapcontainer">
     <div id="map_canvas"></div>
   </div>
-  <div id="map_legend"></div>
+  <div id="map_legend"><h3>Legend</h3></div>
 </div>
 
-# Next Section
+# Transatlantic Travel, From Columbus's First Voyage to Present
 
-The rest of your essay should go under the map, probably.
+Thanks to rapid advancements in technology and the ever-expanding availability of the internet to the general population, today’s society is one that is more connected than it has ever been before. Everything from seemingly endless corpora of information to the most obscure toys and trinkets that one desires are available at the click of a button. Online merchants such as Amazon and Ali-Baba are rapidly growing and expanding into new markets, giving people access to products at incredibly fast speeds. But, while discussing the convenience of online shopping, most people tend to discuss the role of the digital networks of the internet which make websites like Amazon possible. What people often overlook, is the large intercontinental shipping networks that move products and people across the globe and how they have developed over time. These networks are crucial components of many of the things that Western society so enjoys such as over-night shipping from across the globe to five-dollar dresses from fast-fashion retailers that are only made possible due to companies’ abilities to outsource production abroad while still maintaining a quick and reliable way of moving inventory from off shore warehouses to retail/distribution centers here.
+
+## Steamships: Trains...on Water
+While a great deal of research has been conducted on the role of trains and rail-roads in the development of major Western countries such as the United States and England at the onset of the industrial revolution, a similar invention, the steam ship, and its role in the development of modern society and the global economy often goes unnoticed. The creation of the first rail-roads in the 1870’s provided business with a faster, more reliable, means of transporting materials and finished goods. For the countries that invested in these rail-road systems, this reliability made businesses much more productive than previously possible, allowing them and the economies of their nations to grow at tremendous rates.
+
+### Steam-Shipping:
+At the same time, steamships allowed for more reliable transportation of goods between nations, stimulating the global economy via increased trade.  Steamships also provided sailors with freedom from the prevailing wind patterns that would often force them to go out of their way so that they could travel with the wind. As better steamships were developed throughout time, sailors could take more direct routes to their destinations, substantially cutting down on travel time. The ability to travel quickly between continents and to import/export goods to/from all over the world coupled with the increased amount of national production of industrialized countries—stimulated by rail-roads—created an exponential increase in global exports starting in the 1870s [].
+
+### Effect on Immigration:
+Aside from tangible goods, steamships also created safer passage for the greatest resource known to society: labourers. With the advent of steamships, hopeful immigrants finally had a safer, faster, method of travelling to new lands, primarily the United States and Canada, where they could rebuild their lives. For reference, the passengers of the Mayflower, one of the earliest immigrant carrying ships that travelled to the United States in 1620, spent over two months on board a wooden sail ship as they made their way to America from Plymouth. The trip was long and arduous and took the lives of 5 of the 102 people on board, either en-route or shortly after their arrival in Cape Cod. Statistically speaking, the pilgrims were lucky to have experienced such a low number of casualties. Of the immigrants that set sail for America during what is known as the First Wave of immigration from 1790 to 1820, 1 in 10 would die before reaching their destination.
+
+The decreasing transatlantic travel times lowered the risks of immigrating to new lands which lead to an increase in immigration. This can be seen in the number of annual immigrants to Canada which started to increase in 1870 and quadrupled around 1910, a year by which steamships had become commonplace, completely replacing sailing vessels, allowing the average immigrant hopeful to buy, at the very least, a steerage class ticket to the new world.
+
+## Air-Travel: Zeppelins and Airplanes
+Around the same time that steamships were becoming the most common mode of intercontinental travel, other forms of transportation were emerging. The search for even faster methods of travel lead to the invention of the zeppelin, the first of which took flight on July 2, 1900. Only a short time after the invention of the zeppelin, the Wright Brothers invented the first practical/controllable airplane in 1905 with the first continuous transatlantic flight taking place in 1919 from Newfoundland, Canada to Galway Ireland in less than 16 hours! However, airplanes of that period could only carry one or two passengers and could not be used for commercial purposes other than carrying mail. In this sense, the first transatlantic commercial flight happened in 1928 by the LZ 172 Graf Zeppelin, travelling from Friedrichshafen , Germany to Lakehurst, New Jersey in only 11 days. While zeppelins did not have the same cargo carrying capacity as ships, they were much faster in transporting their payloads, providing an even more convenient means of travel for those who could afford it.
+
+## Today
+Fast forward some eighty odd years and current transatlantic transport only takes 8 hours via plane and 9 days via ship with both modes of transportation being able to carry much greater loads than their predecessors. With the increases in both the speed and carrying capacity of modern intercontinental transportation, the world is more connected than ever and trading between nations is at an all-time high. And, barring any accidents or the actions of terrorists, intercontinental travel is safer than it has ever been before for the both people and the goods that they consume.
+
+
+
+
 
 ## in sections like this
 also _italics_ and __bold__ which can also be written *like this* or **like this**
